--- a/MDFiles/my_note/学习/Java学习/Java基础/01.初识java.md
+++ b/MDFiles/my_note/学习/Java学习/Java基础/01.初识java.md
@@ -66,7 +66,7 @@ windows的桌面也是一个文件夹！
 
 ![Clip_2024-07-12_20-01-57](./assets/Clip_2024-07-12_20-01-57.png)
 
-上下滑动，找到java，点击
+向下滑动，找到java，点击
 
 ![Clip_2024-07-12_20-02-57](./assets/Clip_2024-07-12_20-02-57.png)
 
@@ -120,7 +120,11 @@ public class HelloWorld {
 
 下面两种方式结果是一样的！
 
+方式一：
+
 ![Clip_2024-07-12_20-25-18](./assets/Clip_2024-07-12_20-25-18.png)
+
+方式二：
 
 ![Clip_2024-07-12_20-25-52](./assets/Clip_2024-07-12_20-25-52.png)
 
