--- a/MDFiles/my_note/学习/Java学习/Java基础/07.面向对象.md
+++ b/MDFiles/my_note/学习/Java学习/Java基础/07.面向对象.md
@@ -1492,10 +1492,196 @@ public class GirlFriendTest {
 ![image-20240813204947324](./assets/image-20240813204947324.png)
 
 ```java
+/*
+ * @Author       : wephiles@20866
+ * @CreateTime   : 2024/08/13 20:52
+ * @ProjectName  : base_code_2
+ * @PackageName  : com.jinyu.test
+ * @FileName     : com.jinyu.test/TestStudent.java
+ * @ClassName    : TestStudent
+ * @Description  : This is the description of this script.
+ * @Motto        : You must take your place in the circle of life.
+ * @PersonalSite : https://github.com/wephiles or https://gitee.com/wephiles
+ */
+
+package com.jinyu.test;
+
+public class TestStudent {
+    public static void main(String[] args) {
+        /*
+         * 定义一个长度为3的数组，数组存储1~3名 学生对象作为初始数据，学生对象的学号，姓名各不相同。
+         * 学生的属性：学号，姓名，年龄。
+         * 要求1：再次添加一个学生对象，并在添加的时候进行学号的唯一性判断。
+         * 要求2：添加完毕之后，遍历所有学生信息。
+         * 要求3：通过id删除学生信息
+         * 如果存在，则删除，如果不存在，则提示删除失败。
+         * 要求4：删除完毕之后，遍历所有学生信息。
+         * 要求5：查询数组id为2的学生，如果存在，则将他的年龄+1岁
+         * */
+        Student student1 = new Student(1, "张三", 20);
+        Student student2 = new Student(2, "李四", 21);
+        Student student3 = new Student(3, "王五", 19);
+        Student[] students = new Student[3];
+        students[0] = student1;
+        students[1] = student2;
+        students[2] = student3;
+
+        // 再次添加一个学生对象
+        Student student4 = new Student(4, "赵六", 20);
+        if (contains(student4, students)) {
+            // ID已经存在
+            System.out.println("ID已经存在了，请重新分配ID");
+        } else {
+            // ID不存在
+            int len = getCount(students);
+            if (len == students.length) {
+                // 已经满了
+                // 创建一个新数组 长度=老数组长度 + 1
+                // 将老数组的元素都存到新数组中去
+                Student[] newArray = createArray(students);
+                newArray[students.length] = student4;
+                traverse(students);
+            } else {
+                // 还没有存满
+                students[len] = student4;
+                traverse(students);
+            }
+        }
+
+        // 通过ID删除一个学生 如果ID存在那么删除 如果不存在那么提示删除失败
+        int id = 3;
+        int index = getIndex(id, students);
+        if (index == -1) {
+            System.out.println("索引不存在！");
+        } else {
+            // 删除这个索引上的数据
+            students[index] = null;
+        }
+        traverse(students);
+
+        // 查询ID为2的学生 将其年龄 + 1
+        int indexForAge = getIndex(2, students);
+        if (indexForAge != -1) {
+            // 存在 年龄 + 1
+            students[indexForAge].setAge(students[indexForAge].getAge() + 1);
+        } else {
+            // 不存在
+            System.out.println("输入错误，没有ID为2的学生");
+        }
+        traverse(students);
+    }
+
+    public static int getIndex(int id, Student[] students) {
+        for (int i = 0; i < students.length; i++) {
+            if ((students[i] != null) && (students[i].getId() == id)) {
+                return i;
+            }
+        }
+        return -1;
+    }
+
+    public static void traverse(Student[] array) {
+        for (Student student : array) {
+            if (student != null) {
+                System.out.print("age: " + student.getAge() + " ");
+                System.out.print("id: " + student.getId() + " ");
+                System.out.println("name: " + student.getName());
+            }
+        }
+    }
+
+    public static int getCount(Student[] students) {
+        int count = 0;
+        for (Student student : students) {
+            if (student != null) {
+                count++;
+            }
+        }
+        return count;
+    }
+
+    // 判断ID是否重复
+    public static boolean contains(Student student, Student[] students) {
+        for (Student stu : students) {
+            if (stu != null) {
+                if (student.getId() == stu.getId()) {
+                    return true;
+                }
+            }
+
+        }
+        return false;
+    }
+
+    public static Student[] createArray(Student[] oldArray) {
+        Student[] newArray = new Student[oldArray.length + 1];
+        for (int i = 0; i < oldArray.length; i++) {
+            newArray[i] = oldArray[i];
+        }
+        return newArray;
+    }
+}
+
 ```
 
 ```java
+/*
+ * @Author       : wephiles@20866
+ * @CreateTime   : 2024/08/13 20:50
+ * @ProjectName  : base_code_2
+ * @PackageName  : com.jinyu.test
+ * @FileName     : com.jinyu.test/Student.java
+ * @ClassName    : Student
+ * @Description  : This is the description of this script.
+ * @Motto        : You must take your place in the circle of life.
+ * @PersonalSite : https://github.com/wephiles or https://gitee.com/wephiles
+ */
+
+package com.jinyu.test;
+
+public class Student {
+    // 学生类
+    private int id;
+    private String name;
+    private int age;
+
+    public Student() {
+    }
+
+    public Student(int id, String name, int age) {
+        this.id = id;
+        this.name = name;
+        this.age = age;
+    }
+
+    public int getId() {
+        return id;
+    }
+
+    public void setId(int id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+}
+
 ```
+
+
 
 
 
