--- a/MDFiles/my_note/学习/Java学习/Java基础/02.Java基础.md
+++ b/MDFiles/my_note/学习/Java学习/Java基础/02.Java基础.md
@@ -316,7 +316,7 @@ public class Test1 {
 
 ![Clip_2024-07-13_17-10-41](./assets/Clip_2024-07-13_17-10-41.png)
 
-### 2.3.3 字符串的+运算
+### 2.3.3 字符串的`+`运算
 
 ![Clip_2024-07-13_17-14-01](./assets/Clip_2024-07-13_17-14-01.png)
 
