Add abd modify some files.

--- a/MDFiles/my_note/其他/偶遇好句/好词好句.md
+++ b/MDFiles/my_note/其他/偶遇好句/好词好句.md
@@ -1,32 +1,32 @@
-# 
-
 生存本来就是一种幸运，过去的地球上是如此，现在这个冷酷的宇宙中也是如此，但不知从什么时候开始，人类有了一种幻觉，认为生存成了睡手可得的东西，这就是你们失败的原因。-- 《三体》
 
 # 从你的全世界路过
 
 1. “我希望有个如你一般的人，如山间清爽的风，如古城温暖的光，从清晨到夜晚，由山野到书房，只要最后是你，就好。”
 
-2. “故事的开头总是这样，适逢其会，猝不及防。故事的结局总是这样，花开两朵，天各一方。”
+2. <u>我希望有个如你一般的人。如山间清爽的风，如古城温暖的光，由清晨到傍晚，由山野到书房，等侍不怕岁月蹉跎，不怕路途遥远，只要最后是你，就好。</u>
 
-3. “我淋过的最大的雨，是那一天你在烈日下的不回头。”
+3. “故事的开头总是这样，适逢其会，猝不及防。故事的结局总是这样，花开两朵，天各一方。”
 
-4. “在青春的列车上，如果你要提前下车，请别推醒装睡的我，这样我可以沉睡到终点，假装不知道你已经离开。”
+4. “我淋过的最大的雨，是那一天你在烈日下的不回头。”
 
-5. “所有人的坚强，都是柔软生的茧。”
+5. “在青春的列车上，如果你要提前下车，请别推醒装睡的我，这样我可以沉睡到终点，假装不知道你已经离开。”
 
-6. “一个人的记忆就是座城市，时间腐蚀着一切建筑，把高楼和道路全部沙化。如果你不往前走，就会被沙子掩埋。所以我们泪流满面，步步回头，可是只能往前走。”
+6. “所有人的坚强，都是柔软生的茧。”
 
-7. “你燃烧，我陪你焚成灰烬。你熄灭，我陪你低落尘埃。你出生，我陪你徒步人海。你沉默，我陪你一言不发，你欢笑，我陪你山呼海啸。你衰老，我陪你满目疮痍。你逃避，我陪你隐入夜晚。你离开，我只能等待。”
+7. “一个人的记忆就是座城市，时间腐蚀着一切建筑，把高楼和道路全部沙化。如果你不往前走，就会被沙子掩埋。所以我们泪流满面，步步回头，可是只能往前走。”
 
-8. “世事如书，我偏爱你这一句，愿做个逗号，待在你脚边。但你有自己的朗读者，而我只是个摆渡人。” 
+8. “你燃烧，我陪你焚成灰烬。你熄灭，我陪你低落尘埃。你出生，我陪你徒步人海。你沉默，我陪你一言不发，你欢笑，我陪你山呼海啸。你衰老，我陪你满目疮痍。你逃避，我陪你隐入夜晚。你离开，我只能等待。”
 
-9. “我们都会上岸，阳光万里，去哪里都是鲜花开放。” 
-10. “青春是丛林，是荒原，是阳光炙热的奔跑，是大雨滂沱的伫立。” 
-11. “雨水将落满单行道，找不到正确的路标。” 
-12. “当我们自己感到孤独的时候，我们无法温暖别人。” 
-13. “人生就是这样子，每个人都变成各自想念的风。” 
-14. “谢谢你，让我从你的全世界路过。” 
-15. “季节走在单行道上，所以，就算你停下脚步等待，为你开出的花，也不是原来那一朵了。” 
+9. “世事如书，我偏爱你这一句，愿做个逗号，待在你脚边。但你有自己的朗读者，而我只是个摆渡人。” 
+
+10. “我们都会上岸，阳光万里，去哪里都是鲜花开放。” 
+11. “青春是丛林，是荒原，是阳光炙热的奔跑，是大雨滂沱的伫立。” 
+12. “雨水将落满单行道，找不到正确的路标。” 
+13. “当我们自己感到孤独的时候，我们无法温暖别人。” 
+14. “人生就是这样子，每个人都变成各自想念的风。” 
+15. “谢谢你，让我从你的全世界路过。” 
+16. “季节走在单行道上，所以，就算你停下脚步等待，为你开出的花，也不是原来那一朵了。” 
 
 # 以下文案来自于互联网
 
@@ -34,9 +34,7 @@
 
 - 如果我原谅了你，不是因为我听了你的解释，而是我任然爱你 被你急于解释的样子感动了。 —— 张小娴
 
-- 我给你瘦落的街道、绝望的落日、荒郊的月亮。我给你一个久久地望着孤月的人的悲哀。 我给你我已死去的祖辈，后人们用大理石祭奠的先魂：我父亲的父亲，阵亡于布宜诺斯艾利斯的边境，两颗子弹射穿了他的胸膛，死的时候蓄着胡子，尸体被士兵们用牛皮裹起；我母亲的祖父――那年才二十四岁――在秘鲁率领三百人冲锋，如今都成了消失的马背上的亡魂。 我给你我的书中所能蕴含的一切悟力，以及我生活中所能有的男子气概和幽默。 我给你一个从未有过信仰的人的忠诚。 我给你我设法保全的我自己的核心――不营字造句，不和梦交易，不被时间、欢乐和逆境触动的核心。 我给你早在你出生前多年的一个傍晚看到的一朵黄玫瑰 。
-
-  —— 博尔赫斯 《我用什么才能留住你》
+- 我给你瘦落的街道、绝望的落日、荒郊的月亮。我给你一个久久地望着孤月的人的悲哀。 我给你我已死去的祖辈，后人们用大理石祭奠的先魂：我父亲的父亲，阵亡于布宜诺斯艾利斯的边境，两颗子弹射穿了他的胸膛，死的时候蓄着胡子，尸体被士兵们用牛皮裹起；我母亲的祖父――那年才二十四岁――在秘鲁率领三百人冲锋，如今都成了消失的马背上的亡魂。 我给你我的书中所能蕴含的一切悟力，以及我生活中所能有的男子气概和幽默。 我给你一个从未有过信仰的人的忠诚。 我给你我设法保全的我自己的核心――不营字造句，不和梦交易，不被时间、欢乐和逆境触动的核心。 我给你早在你出生前多年的一个傍晚看到的一朵黄玫瑰 。—— 博尔赫斯 《我用什么才能留住你》
 
 - 因为遇见你，我才知道我也能拥有美丽的记忆。 —— 《千与千寻》
 
@@ -312,7 +310,7 @@
 
 - 我们不过都是沧海一粟，不要想，只是去做，任何选择都是矛盾的。你怕什么呢？往前冲才是青春，向阳盛开才是同志。
 
-      
+  ​    
 
 # 鲁迅
 
@@ -325,3 +323,267 @@
 - 不满是向上的车轮，能够载着不自满的人前进。
 - 惟沉默是最高的轻蔑。
 - 勇者愤怒，抽刃向更强者，怯者愤怒，却抽刃向更弱者。
+
+# 	其他
+
+真正要紧的是，我们有能力变得敞开，可以去听到我们不惯于听到的东西，可以用一种新方式去看待。  ---阿迪亚香提-
+
+# 歌词
+
+## 鼓楼-赵雷
+
+```tex
+我走在鼓楼下面路在堵着
+雨后的阳光洒落
+人们都出来了
+执着的迷惘的文艺青年很多
+如果我无聊了
+就会来这里坐坐
+我是个沉默不语的
+靠着墙壁晒太阳的过客
+如果我有些倦意了
+就让我在这里独自醒过
+我站在鼓楼上面
+一切繁华与我无关
+这是个拥挤的地方
+而我却很平凡
+我走在鼓楼下面
+淋湿的咖啡馆
+睡不着的后海边
+月亮还在抽着烟
+喝醉的亲吻着
+快活的人不眠
+唯有我倚着围栏
+对过往说晚安
+我是个沉默不语的
+靠着车窗想念你的乘客
+当107 路再次经过
+时间是带走青春的电车
+我站在什刹海边
+一切甜蜜与我无关
+这是个拥挤的地方
+而我却很孤单
+我在鼓楼我在鼓楼
+我在鼓楼我在鼓楼
+我在鼓楼我在鼓楼
+```
+
+## 我记得-赵雷
+
+```tex
+我带着比身体重的行李
+游入尼罗河底
+经过几道闪电 看到一堆光圈
+不确定是不是这里
+我看到几个人站在一起
+他们拿着剪刀摘走我的行李
+擦拭我的脑袋 没有机会返回去
+直到我听见一个声音 我确定是你
+可你怎记得我
+我带来了另界的消息
+可我怎么告知你
+注定失忆着相遇
+我记得这里是片树林 后面有个山坡
+山坡上的枣树每当秋天到来
+我们把枣装满口袋
+我记得除了朋友我还 做过你的叔父
+你总喜欢跟在我的屁股后面
+只是为了那几个铜钱
+我记得我们曾是恋人 后来战争爆发
+你上战场后就再也没有回来
+直到收不到你的信
+我们总这样重复分离 却要重新开始
+相互送别对方 说着来世再见
+再次失忆着相聚
+呜 呜 呜 呜
+快来抱抱 快来抱抱我
+呜 呜 呜 呜
+快来抱抱 快来抱抱我
+呜 呜 呜 呜
+快来抱抱 快来抱抱我
+呜 呜 呜 呜
+快来抱抱 快来抱抱我
+在路上我遇到了一位故去多年的人
+她是如此年轻 扎着过肩马尾
+露出和你一样的笑
+她和我讲了很多关于你成长的故事
+在星空另一端 思念从未停止
+如同墓碑上的名字
+不要哭我最亲爱的人 我最好的玩伴
+时空是个圆圈 直行或是转弯
+我们最终都会相见
+在城池的某个拐角处 在夕阳西下时
+在万家灯火的某一扇窗纱里
+人们失忆着相聚
+呜 快来抱抱 快来抱抱我
+呜 快来抱抱 快来抱抱我
+我终于找到你
+```
+
+## 无名的人-毛不易
+
+```tex
+我是这路上 没名字的人
+我没有新闻 没有人评论
+要拼尽所有 换得普通的剧本
+曲折辗转 不过谋生
+我是离开 小镇上的人
+是哭笑着 吃过饭的人
+是赶路的人 是养家的人
+是城市背景的 无声
+我不过 想亲手触摸
+弯过腰的每一刻
+留下的 湿透的脚印 是不是值得
+这哽咽 若你也相同
+就是同路的朋友
+致所有 顶天立地却 平凡普通的
+无名的人啊 我敬你一杯酒
+敬你的沉默 和每一声怒吼
+敬你弯着腰 上山往高处走
+头顶 苍穹 努力地生活
+你来自于 南方的村落
+来自粗糙的双手
+你站在 楼宇的缝隙
+可你没有退缩
+我来自于 北方的春天
+来自一步一回首
+背后有 告别的路口
+温暖每个日落
+当家乡入冬 的时候
+列车到站 以后
+小时候的风 再吹过
+回忆起单纯 的快乐
+在熟悉的 街头
+有人 会用所有的温柔 喊出你的
+名字
+离家的人啊 我敬你一杯酒
+敬你的沉默 和每一声怒吼
+敬你弯着腰 上山往高处走
+头顶 苍穹 努力地生活
+无名的人啊 我敬你一杯酒
+敬你的沉默 和每一声怒吼
+敬你弯着腰 上山往高处走
+头顶 苍穹 努力地生活
+无名的人啊
+无名的人啊
+无名的人啊 车来啦
+太多牵挂就 别回头啊
+无名的人啊 车开啦
+往前吧 带着你的梦
+```
+
+## 一荤一素-毛不易
+
+```tex
+日出又日落
+深处再深处
+一张小方桌
+有一荤一素
+一个身影从容地忙忙碌碌
+一双手让这时光有了温度
+太年轻的人
+他总是不满足
+固执地不愿停下
+远行的脚步
+望着高高的天走了长长的路
+忘了回头看
+她有没有哭
+月儿明 风儿轻
+可是你在敲打我的窗棂
+听到这儿你就别担心
+其实我过的还可以
+月儿明 风儿轻
+你又可曾来过我的梦里
+一定是你来时太小心
+知道我睡得轻
+太年轻的人
+他总是不满足
+固执地不愿停下
+远行的脚步
+望着高高的天走了长长的路
+忘了回头看
+她有没有哭
+月儿明 风儿轻
+可是你在敲打我的窗棂
+听到这儿你就别担心
+其实我过的还可以
+月儿明 风儿轻
+你又可曾来过我的梦里
+一定是你来时太小心
+知道我睡得轻
+一定是你来时太小心
+怕我再想起你
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
